# image_classification

./: .gitignore  pyproject.toml
image_classification/src/: load_data.py  model.py  train.py
tests/: test_model.py
